# app-usage-desktop

./: .gitignore  README.md  app-usage-daemon.spec  build_deb.sh  build_windows.bat  pyproject.toml  run.py
Example_vault/: App Usage Obsidian intergration.md  README.md  clean.sh
Example_vault/.obsidian/: graph.json  workspace.json
Example_vault/Activities/: act_0006c93eca3f4da1.md  act_032854fec6df2a73.md  act_0400826896e4e3f7.md  act_0a3e0ddb15704c31.md  act_0a4c0d4af7b5a040.md  act_0ba039d5310c4fa9.md  act_0eac7ec773dc4b32.md  act_13fbc80f7cc18d55.md  act_17d463d278c696b7.md  act_1cdbce8c6e18cf77.md  act_24c09e1960e8afd3.md  act_2713daf0db865943.md  act_2ea9697636d702e2.md  act_45b9271341a872b3.md  act_4bbb5ebc6519e5ac.md  act_53a490ebc054f0b6.md  act_53e3d79492ceba91.md  act_55405c250713fbe5.md  act_58c559261815a1e8.md  act_5ab92c533d37024a.md  act_5b6da6f65b7f11cd.md  act_5b7c74587dc8ba97.md  act_5ec06b64ec78c590.md  act_5fdc9b8f16c15dae.md  act_625fb2e7b3a4da8b.md  act_649a71fe7df4e011.md  act_681295140e9f87ca.md  act_681d7e66fa0963a5.md  act_6d2d7cc9836915f9.md  act_737d8197558df671.md  act_80ce4853e76e0d57.md  act_84d3e1ac1650ab0e.md  act_8603421771818fde.md  act_86b7646ba1761ad3.md  act_88f191085113200c.md  act_94d13480e9971c30.md  act_95c98929eb8fa92f.md  act_a07a61684f5754e9.md  act_a318c2798cc9695d.md  act_ad747bd1d954800a.md  (+15 more)
Example_vault/Scripts/: Asset.js  Budget.js  DailyNote.js  (+9 more)
app_usage_cli/: builder.py  cli.py  config.py  hooks.py  importer.py  service.py  syncer.py  tracker.py  tracker_wayland_gnome.py  tracker_windows.py
tests/: test_hooks.py
(+26 files in other folders)
