[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app_usage_cli"
version = "0.1.0"
description = "App Usage Tracking and Processing CLI"
dependencies = [
    "psutil",
    "dbus-next; sys_platform == 'linux'"
]

[project.scripts]
app-usage = "app_usage_cli.cli:main"
